Refactor LevelRendererMixin to utilize MixinExtras for local capture

--- a/build.gradle
+++ b/build.gradle
@@ -156,9 +156,16 @@ dependencies {
     // For more info:
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
-    
+
+    // Mixins
     compileOnly group:'org.spongepowered', name:'mixin', version:'0.8.5'
     annotationProcessor("org.spongepowered:mixin:0.8.5-SNAPSHOT:processor")
+
+    // Mixin Extras
+    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.4.1"))
+    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.4.1")) {
+        jarJar.ranged(it, "[0.4.1,)")
+    }
 }
 
 // This block of code expands all declared replace properties in the specified resource targets.
